fixed overlapping betwen event's boxes

--- a/CSS/events.css
+++ b/CSS/events.css
@@ -146,7 +146,7 @@ h2:hover {
 .container .event {
 
     width: 300px;
-    margin: 80px;
+    margin: 96px;
     /* padding: 30px; */
     /* border: 2px solid white; */
     /* box-sizing: border-box; */
